data/derived/fa15/progs/unify/prog2581.ml.out
Characters 237-238:
  let (_, res) = List.fold_left f base args in
                                ^
Error: This expression has type
         (int * 'a) list -> int * int -> int list * int list
       but an expression was expected of type
         (int * 'a) list -> int * int -> (int * 'a) list
       Type int list * int list is not compatible with type (int * 'a) list 
